@@ -4,7 +4,8 @@
 # Database to use for storing codestriker data.  Examples given are Postgresql
 # and MySQL
 #$db = 'DBI:Oracle:host=127.0.0.1;sid=local';
-#$db = 'DBI:Pg:dbname=codestrikerdb3';
+#$db = 'DBI:ODBC:Codestriker';
+#$db = 'DBI:Pg:dbname=codestrikerdb';
 $db = 'DBI:mysql:dbname=codestrikerdb';
 
 # Database user.
@@ -30,6 +31,7 @@ $use_compression = 0;
 $gzip = '/bin/gzip';
 
 # Location of the cvs binary.
+#$cvs = 'c:/Program Files/GNU/WinCvs 1.3/CVSNT/cvs.exe';
 $cvs = '/usr/bin/cvs';
 
 # Location of the vss binary.  This can be ignored for deployments which don't
@@ -60,7 +62,8 @@ $bugtracker = '';
 # hostname and repository form must be used here.  Typically, this would
 # be set to an anonymous user.
 #
-# The final example is a VSS repository.
+# The final examples are a VSS repository, and some CVS repositories on
+# a Win32 system.
 #
 # If this list is empty it won't be possible to view the entire contents of a
 # file before the proposed change and/or after. All of the places 
@@ -77,7 +80,9 @@ $bugtracker = '';
      'http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi /cvsroot',
      'svn:http://svn.collab.net/repos/svn/trunk',
      ':pserver:anonymous:password@cvs.sourceforge.net:/cvsroot',
-     'vss:localhost'
+     'vss:localhost',
+     ':local:c:\\cvsrep',
+     'c:/cvsrep2',
     );
 
 # A mapping of repositories to filename viewers.  Examples of such systems
