@@ -38,6 +38,14 @@ sub new {
     return bless $self, $type;
 }
 
+# Return the DBD module this is dependent on.
+sub get_module_dependencies {
+    return { name => 'DBD::Pg', version => '0' };
+}
+
+sub getDBDModuleVer {
+}
+
 # Retrieve a database connection.
 sub get_connection {
     my $self = shift;
